--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ sphinx>=1.4
 sphinx_rtd_theme
 ipykernel
 nbsphinx
+
 anndata==0.8.0
 scanpy>=1.8.1
 einops==0.4.1 
@@ -15,4 +16,6 @@ numpy==1.20.3
 matplotlib==3.5.2
 scikit-learn==0.24.1 
 scirpy==0.10.1
+plotly==5.10.0
+tabulate=0.8.9
 logomaker
