--- a/environment.yml
+++ b/environment.yml
@@ -12,13 +12,14 @@ dependencies:
       - --extra-index-url https://pypi.nvidia.com
       - sphinx_rtd_theme==1.2.0
       - sphinx-hoverxref==1.3.0
+      - labw_utils==1.0.3
       - tabluate==0.9.0
       - anndata==0.8.0
       - scanpy==1.8.1
       - scirpy==0.10.1
-      - numpy==1.20.3
       - pandas==1.4.2
       - matplotlib==3.5.2
+      - umap-learn==0.5.1
       - seaborn==0.11.2
       - scikit-learn==0.24.1 
       - einops==0.4.1 
@@ -28,3 +29,5 @@ dependencies:
       - torch==1.13.1+cu117
       - torchvision==0.14.1+cu117
       - torchaudio==0.13.1+cu117
+      - numba == 0.57.1
+      - numpy==1.21.6
