--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ sphinx>=1.4
 sphinx_rtd_theme
 ipykernel
 nbsphinx
+labw_utils==1.0.3
 anndata==0.8.0
-scanpy>=1.8.1
+scanpy==1.8.1
 einops==0.4.1 
 biopython==1.79
 seaborn==0.12.2
@@ -11,10 +12,11 @@ torch==1.13.1
 torchvision==0.14.1
 torchaudio==0.13.1
 pandas==1.4.2
+numba==0.57.1
 numpy==1.20.3
 matplotlib==3.5.2
 scikit-learn==0.24.1 
 scirpy==0.10.1
 plotly==5.10.0
 tabulate==0.8.9
-umap==0.5.5
+umap-learn==0.5.1
