--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ torchaudio==0.13.1
 pandas==1.4.2
 numba==0.57.1
 numpy==1.21.6
-matplotlib==3.5.2
+matplotlib>=3.5.2
 scikit-learn==0.24.1 
 scirpy==0.10.1
 plotly==5.10.0
