--- a/environment.yml
+++ b/environment.yml
@@ -12,7 +12,7 @@ dependencies:
       - --extra-index-url https://pypi.nvidia.com
       - sphinx_rtd_theme==1.2.0
       - sphinx-hoverxref==1.3.0
-      - tabluate==0.9.0
+      - tabulate==0.9.0
       - anndata==0.8.0
       - scanpy==1.8.1
       - scirpy==0.10.1
